# shor-link

./: .gitignore  README.md  create_tables.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  session.py  settings.py  test_connection.py
.do/: app.yaml
.github/workflows/: deploy.yml
deployments/: Dockerfile.deploy
src/: create_tables.py  database.py  main.py  models.py  responses.py  schemas.py  settings.py  template.env  utils.py
src/api/: endpoints.py
src/api/v1/endpoints/: short_urls.py  users.py  without_prefix.py
src/middlewares/: catcher.py  pydantic_errors.py
src/templates/: index.html
src/tests/: conftest.py  pytest.ini  test_users.py
